--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ model-viewer {
 
 <model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
     <button slot="ar-button" id="ar-button">
-        Смотреть в дополненной реальности
+        Смотреть через камеру
     </button>
 </model-viewer>
   
