--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ model-viewer {
     border-radius: 50px;
     border: 1px solid #DADCE0;
     <button slot="ar-button" id="ar-button">
-        Смотреть из камеры
+        Смотреть в камеры
     </button>
   }
 
