--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@ model-viewer {
 #ar-button {
 
     background-repeat: no-repeat;
-    background-size: 50px 50px;
-    background-position: 20px 50%;
-    background-color: #fff;
+    background-size: 90px 90px;
+    background-position: 50px 50%;
+    background-color: #595959;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     white-space: nowrap;
     top: 0px;
-    padding: 0px 30px 0px 30px;
+    padding: 20px 30px 20px 30px;
     font-family: Roboto Regular, Helvetica Neue, sans-serif;
-    font-size: 25px;
-    color:#DADCE0;
-    height: 50px;
+    font-size: 80px;
+    color:#ffffff;
+    height: 110px;
     line-height: 50px;
-    border-radius: 50px;
-    border: 2px solid #DADCE0;
+    border-radius: 20px;
+    border: 5px solid #9b9b9b;
     
   }
 
