--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@ model-viewer {
   width: 100vw;
   height: 50vh;
 }
-
+@font-face {
+font-family: 'Montserrat';
+src: url('fonts/Montserrat-Regular.ttf') format('truetype');
+}
 #ar-button {
 
     background-repeat: no-repeat;
-    background-size: 90px 90px;
+    background-size: 80px 80px;
     background-position: 50px 50%;
     background-color: #595959;
     position: absolute;
@@ -22,13 +25,13 @@ model-viewer {
     transform: translateX(-50%);
     white-space: nowrap;
     top: 0px;
-    padding: 20px 30px 20px 30px;
-    font-family: Roboto Regular, Helvetica Neue, sans-serif;
+    padding: 20px 20px 20px 20px;
+    font-family: 'Montserrat', sans-serif;
     font-size: 80px;
     color:#ffffff;
-    height: 110px;
+    height: 100px;
     line-height: 50px;
-    border-radius: 20px;
+    border-radius: 10px;
     border: 5px solid #9b9b9b;
     
   }
