--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ model-viewer {
 font-family: 'Montserrat';
 src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 }
+
 #ar-button {
 
     background-repeat: no-repeat;
@@ -24,7 +25,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
     left: 50%;
     transform: translateX(-50%);
     white-space: nowrap;
-    top: 0px;
+    top: 600px;
     padding: 20px 20px 20px 20px;
     font-family: 'Montserrat', sans-serif;
     font-size: 80px;
@@ -52,7 +53,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 
 <model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
   <button slot="ar-button" id="ar-button">
-        Смотреть на камеры
+        Смотреть через камеру
     </button>
     
 </model-viewer>
