--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   }
 
   #ar-button:active {
-    background-color: #E8EAED;
+    background-color: #000000;
   }
 
   #ar-button:focus {
