--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   var currentTime = new Date();
   var currentHour = currentTime.getHours();
   
-  if (currentHour > 12) {
+  if (currentHour < 12) {
    document.write("<h1>Сценарий 1</h1>");
    <model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
       <button slot="ar-button" id="ar-button">
         Смотреть через камеру
       </button>  
     </model-viewer>
-  } else if (currentHour < 12) {
+  } else if (currentHour > 12) {
    document.write("<h1>Сценарий 2</h1>");
    <model-viewer src="Scene1.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene1.usdz" xr-environment>
       <button slot="ar-button" id="ar-button">
