--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
     </model-viewer>
   } else {
    document.write("<h1>Другое время</h1>");
+    <model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
+      <button slot="ar-button" id="ar-button">
+        Смотреть через камеру
+      </button>  
+    </model-viewer>
   }
  </script>
 
