--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
    document.write("<h1>Другое время</h1>");
     <model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
       <button slot="ar-button" id="ar-button">
-        Смотреть через камеру
+        Смотреть в камеру
       </button>  
     </model-viewer>
   }
