--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   var currentTime = new Date();
   var currentHour = currentTime.getHours();
  
-  if (currentHour > 12) {
-   document.querySelector("model-viewer").setAttribute("src", "Scene.glb");
-   document.querySelector("model-viewer").setAttribute("ios-src", "Scene.usdz");
-  }else {
+  if (currentHour == 12) {
    document.querySelector("model-viewer").setAttribute("src", "Scene2.glb");
    document.querySelector("model-viewer").setAttribute("ios-src", "Scene2.usdz");
+  }else {
+   document.querySelector("model-viewer").setAttribute("src", "Scene.glb");
+   document.querySelector("model-viewer").setAttribute("ios-src", "Scene.usdz");
   }
  </script>
 
-<model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
+<model-viewer src="" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="" xr-environment>
   <button slot="ar-button" id="ar-button">
     Смотреть через камеру
   </button>  
