--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   var currentHour = currentTime.getHours();
  
   if (currentHour == 12) {
-   document.querySelector("model-viewer").setAttribute("src", "Scene2.glb");
-   document.querySelector("model-viewer").setAttribute("ios-src", "Scene2.usdz");
+   document.querySelector("model-viewer").setAttribute(src, "Scene2.glb");
+   document.querySelector("model-viewer").setAttribute(ios-src, "Scene2.usdz");
   }else {
-   document.querySelector("model-viewer").setAttribute("src", "Scene.glb");
-   document.querySelector("model-viewer").setAttribute("ios-src", "Scene.usdz");
+   document.querySelector("model-viewer").setAttribute(src, "Scene.glb");
+   document.querySelector("model-viewer").setAttribute(ios-src, "Scene.usdz");
   }
  </script>
 
