--- a/index.html
+++ b/index.html
@@ -53,20 +53,14 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 </style>
 
 <script>
-  var currentTime = new Date();
-  var currentHour = currentTime.getHours();
-  const sceneUrl = "Scene.glb";
- 
-  if (currentHour == 12) {
+  
    document.querySelector("model-viewer").setAttribute(src, "Scene2.glb");
    document.querySelector("model-viewer").setAttribute(ios-src, "Scene2.usdz");
-  }else {
-   document.querySelector("model-viewer").setAttribute(src, "Scene.glb");
-   document.querySelector("model-viewer").setAttribute(ios-src, "Scene.usdz");
-  }
+  
+  
  </script>
 
-<model-viewer src="Scene2.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
+<model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
   <button slot="ar-button" id="ar-button">
     Смотреть через камеру
   </button>  
