--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   }
 </style>
 
-<script>
-  
-   document.querySelector("model-viewer").setAttribute(src, "Scene2.glb");
-   document.querySelector("model-viewer").setAttribute(ios-src, "Scene2.usdz");
-  
-  
- </script>
-
-<model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
+<model-viewer id="model-viewer" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" xr-environment>
   <button slot="ar-button" id="ar-button">
     Смотреть через камеру
   </button>  
 </model-viewer>
+
+<script>
+  const modelViewer = document.getElementById('model-viewer');
+  modelViewer.addEventListener('load', () => {
+    modelViewer.src = 'Scene2.glb';
+    modelViewer.iosSrc = 'Scene2.usdz';
+  });
+</script>
 
 </body>
 </html>
