--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 <script>
   const modelViewer = document.getElementById('model-viewer');
   modelViewer.addEventListener('load', () => {
-    modelViewer.src = 'Scene2.glb';
-    modelViewer.iosSrc = 'Scene2.usdz';
+    modelViewer.src = "Scene2.glb";
+    modelViewer.iosSrc = "Scene2.usdz";
   });
 </script>
 
