--- a/index.html
+++ b/index.html
@@ -52,19 +52,11 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   }
 </style>
 
-<model-viewer modelViewer.src ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" modelViewer.iosSrc xr-environment>
+<model-viewer src="Scene.glb" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" ios-src="Scene.usdz" xr-environment>
   <button slot="ar-button" id="ar-button">
     Смотреть через камеру
   </button>  
 </model-viewer>
-
-<script>
-  const modelViewer = document.getElementById('model-viewer');
-  modelViewer.addEventListener('load', () => {
-    modelViewer.src = "Scene2.glb";
-    modelViewer.iosSrc = "Scene2.usdz";
-  });
-</script>
 
 </body>
 </html>
