--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   const currentTime = new Date();
   const currentHour = currentTime.getHours();
  
-  if (currentHour < 12) {
+  if (currentHour > 12) {
     modelViewer.src = 'Scene.glb';
   } else {
     modelViewer.src = 'Scene2.glb';
