--- a/index.html
+++ b/index.html
@@ -62,11 +62,17 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   const modelViewer = document.getElementById('model-viewer');
   const arButton = document.getElementById('ar-button');
   const currentTime = new Date();
-  const currentHour = currentTime.getHours();
+  const currentHour = currentTime.getMinutes();
  
-  if (currentHour == 1) {
+  if (currentHour >= 5) {
     modelViewer.src = 'Scene.glb';
     modelViewer.iosSrc = 'Scene.usdz';
+  }if (currentHour >= 10) {
+    modelViewer.src = 'RED.glb';
+    modelViewer.iosSrc = 'RED.usdz';
+  }if (currentHour >= 15) {
+    modelViewer.src = 'BLUE.glb';
+    modelViewer.iosSrc = 'BLUE.usdz';
   } else {
     modelViewer.src = 'Scene2.glb';
     modelViewer.iosSrc = 'Scene2.usdz';
