--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   if (currentHour <= 25) {
     modelViewer.src = 'Scene.glb';
     modelViewer.iosSrc = 'Scene.usdz';
-  }else if (25 < currentHour <= 30) {
+} else if (currentHour > 25 && currentHour <= 30) {
     modelViewer.src = 'RED.glb';
     modelViewer.iosSrc = 'RED.usdz';
-  }else if (30 < currentHour <= 35) {
+} else if (currentHour > 30 && currentHour <= 35) {
     modelViewer.src = 'BLUE.glb';
     modelViewer.iosSrc = 'BLUE.usdz';
-  } else {
+} else {
     modelViewer.src = 'Scene2.glb';
     modelViewer.iosSrc = 'Scene2.usdz';
-  }
+}
 
   arButton.addEventListener('click', () => {
     modelViewer.activateAR();
