--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 
 #ar-button {
 
-    background-repeat: no-repeat;
-    background-size: 80px 80px;
-    background-position: 50px 50%;
-    background-color: #595959;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    white-space: nowrap;
-    top: 70%;
-    padding: 20px 20px 20px 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 60px;
-    color:#ffffff;
-    height: 100px;
-    line-height: 50px;
-    border-radius: 25px;
-    border: 5px solid #9b9b9b;
+  background-color: #ffffff;
+  border: 1px solid #d6d6d6;
+  border-radius: 22px;
+  color: #595959;
+  display: inline-block;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: inset 0px -1px 0px rgba(255,255,255,0.5), inset 0px 1px 0px rgba(0,0,0,0.05), 0px 1px 2px rgba(0,0,0,0.3);
+  transform: translateX(-50%);
+  position: absolute;
+  background-position: 50px 50%;
+  top: 70%;
+  left: 50%;
     
   }
 
