--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   color: #595959;
   display: inline-block;
   font-family: 'Helvetica Neue', sans-serif;
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bold;
   padding: 10px 20px;
   text-align: center;
@@ -36,7 +36,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   background-position: 50px 50%;
   top: 70%;
   left: 50%;
-    
+  white-space: nowrap;  
   }
 
   #ar-button:active {
