--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   display: inline-block;
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 50px;
-  font-weight: bold;
+  font-weight: light;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
