--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
  <title>Все дело в людях</title>
 </head>
 <body>
+background-image: url('image.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 80px auto;
+    }
+  </style>
+</head>
+<body>
 
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
