--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
  <title>Все дело в людях</title>
 </head>
 <body>
-background-image: url('image.png');
+<style>
+    body {
+      background-color: #f2f2f2;
+      background-image: url('image.jpg');
       background-repeat: no-repeat;
       background-position: center center;
-      background-size: 80px auto;
+      background-size: 100px auto;
     }
   </style>
-</head>
-<body>
+
 
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
