--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <style>
     body {
-      background-color: #f2f2f2;
+      background-color: #abccea;
       background-image: url('image.jpg');
       background-repeat: no-repeat;
       background-position: center center;
