--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <style>
     body {
       background-color: #abccea;
+      background-color: 100px auto;
       background-image: url('image.jpg');
       background-repeat: no-repeat;
       background-position: center center;
@@ -20,7 +21,7 @@
 <style>
 model-viewer {
   width: 100vw;
-  height: 80vh 10%;
+  height: 80vh;
 }
 @font-face {
 font-family: 'Montserrat';
