--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <style>
     body {
       background-color: #abccea;
-      background-color: 100px auto;
+      background-color: 100px;
       background-image: url('image.jpg');
       background-repeat: no-repeat;
       background-position: center center;
-      background-size: 100px auto;
+      background-size: 100px;
     }
   </style>
 
