--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>Все дело в людях</title>
 </head>
 <body>
-style>
+<style>
     body {
       background-color: #abccea;
       background-image: url('image.jpg');
