--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
     body {
       background-color: #fff;
-      background-image: url('image.jpg');
+      background-image: url('image.png');
       background-repeat: no-repeat;
       background-position: center center;
       background-size: 100px;
