--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       background-size: 100px;
     }
     
-    /* фон меньше 100px будет белым */
-    @media (max-width: 100px) {
+    /* фон больше 100px будет белым */
+    @media (min-width: 101px) {
       body {
         background-color: #abccea;
         background-size: 100px;
