--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background-color: #fff;
       background-image: url('image.png');
       background-repeat: no-repeat;
-      background-position: center center;
+      background-position: up center;
       background-size: 100px;
     }
     
