--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background-color: #fff;
       background-image: url('image.png');
       background-repeat: no-repeat;
-      background-position: up center;
+      background-position: up 50%;
       background-size: 100px;
     }
     
@@ -58,9 +58,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   white-space: nowrap;  
   }
 
-  #ar-button:active {
-    background-color: #000000;
-  }
+ 
 
   #ar-button:focus {
     outline: none;
