--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       background-color: #fff;
       background-image: url('image.png');
       background-repeat: no-repeat;
-      background-position: 50px 50%;
-      background-size: 100px;
+      background-position: 50% 20px;
+      background-size: 200px;
     }
     
     /* фон больше 100px будет белым */
