--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       background-color: #fff;
       background-image: url('image.png');
+      background-image2: url('image2.png');
       background-repeat: no-repeat;
       background-position: 50% 20px;
       background-size: 600px;
