--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 
 #ar-button {
 
-  background-color: #ffffff;
-  border: 1px solid #d6d6d6;
+  background-color: #abccea;
+  border: 0px solid #abccea;
   border-radius: 22px;
-  color: #595959;
+  color: #fff;
   display: inline-block;
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 50px;
-  font-weight: light;
+  font-weight: lighter;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
