--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 <style>
     body {
       background-color: #fff;
-      background-image: url('image.png');
-      background-image2: url('image2.jpg');
+      background-image: url('image.png'), url('image2.jpg');
       background-repeat: no-repeat;
-      background-position: 50% 20px;
-      background-size: 500px;
+      background-position: 50% 20px, 50% 0px;
+      background-size: 500px, 600px;
     }
-    
-  </style>
+</style>
 
 
 
