--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <style>
     body {
       background-color: #fff;
-      background-image: url('image.png'), url('image2.jpg');
+      background-image: url('image2.jpg'), url('image.png');
       background-repeat: no-repeat;
-      background-position: 50% 20px, 50% 0px;
-      background-size: 500px, 600px;
+      background-position: 50% 0px, 50% 20px;
+      background-size: 600px, 500px;
     }
 </style>
 
