--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   color: #fff;
   display: inline-block;
   font-family: 'Helvetica Neue', sans-serif;
-  font-size: 50px;
-  font-weight: lighter;
-  padding: 30px 50px;
-  text-align: center;
+  font-size: 40px;
+  font-weight: normal;
+  padding: 40px 70px;
+  text-align: left;
   text-decoration: none;
   transform: translateX(-50%);
   position: absolute;
