--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 40px;
   font-weight: normal;
-  padding: 40px 70px;
+  padding: 30px 70px 100px 100px;
   text-align: left;
   text-decoration: none;
   transform: translateX(-50%);
