--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   border-radius: 100px;
   color: #fff;
   display: inline-block;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 40px;
   font-weight: normal;
   padding: 30px 70px 100px 100px;
