--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
 #ar-button {
 
   background-color: #abccea;
+  border: 0px solid #abccea;
   border-radius: 100px;
   color: #fff;
   display: inline-block;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 40px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 50px;
   font-weight: normal;
-  padding: 30px 70px 100px 100px;
-  text-align: left;
+  padding: 30px 150px 30px 50px;
+  text-align: center;
   text-decoration: none;
   transform: translateX(-50%);
   position: absolute;
