--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ src: url('fonts/Montserrat-Regular.ttf') format('truetype');
   }
 </style>
 
-<model-viewer id="model-viewer" ar ar-scale="fixed" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut">
+<model-viewer id="model-viewer" ar camera-controls touch-action="pan-y" alt="A 3D model of an astronaut">
   <button slot="ar-button" id="ar-button">
    Смотреть через камеру
   </button>  
