--- a/index.html
+++ b/index.html
@@ -4,121 +4,9 @@
  <title>Все дело в людях</title>
 </head>
 <body>
-<style>
-    body {
-      background-color: #fff;
-      background-image: url('image.png');
-      background-repeat: no-repeat;
-      background-position: 50% 20px;
-      background-size: 500px;
-    }
-</style>
-
-
-
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
-<style>
-model-viewer {
-  width: 100vw;
-  height: 80vh;
- margin-top: 100px;
-}
-@font-face {
-font-family: 'Montserrat';
-src: url('fonts/Montserrat-Regular.ttf') format('truetype');
-}
-
-#ar-button {
-
-  background-color: #abccea;
-  border: 0px solid #abccea;
-  border-radius: 100px;
-  color: #fff;
-  display: inline-block;
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 50px;
-  font-weight: normal;
-  padding: 30px 150px 30px 50px;
-  text-align: center;
-  text-decoration: none;
-  transform: translateX(-50%);
-  position: absolute;
-  background-position: 50px 50%;
-  top: 70%;
-  left: 50%;
-  white-space: nowrap;  
-  }
-
- 
-
-  #ar-button:focus {
-    outline: none;
-  }
-
-  #ar-button:focus-visible {
-    outline: 2px solid #4285f4;
-  }
-</style>
-
-<model-viewer id="model-viewer" ar camera-controls touch-action="pan-y" alt="A 3D model of an astronaut">
-  <button slot="ar-button" id="ar-button">
-   Смотреть через камеру
-  </button>  
-</model-viewer>
-
-<script>
-  const modelViewer = document.getElementById('model-viewer');
-  const arButton = document.getElementById('ar-button');
-  const currentTime = new Date();
-  const currentHour = currentTime.getMinutes();
- 
-  if (currentHour <= 5) {
-    modelViewer.src = 'Scene.glb';
-    modelViewer.iosSrc = 'Scene.usdz';
-} else if (currentHour > 5 && currentHour <= 10) {
-    modelViewer.src = 'RED.glb';
-    modelViewer.iosSrc = 'RED.usdz';
-} else if (currentHour > 10 && currentHour <= 15) {
-    modelViewer.src = 'BLUE.glb';
-    modelViewer.iosSrc = 'BLUE.usdz';
-} else if (currentHour > 15 && currentHour <= 20) {
-    modelViewer.src = 'Scene.glb';
-    modelViewer.iosSrc = 'Scene.usdz';
-} else if (currentHour > 20 && currentHour <= 25) {
-    modelViewer.src = 'RED.glb';
-    modelViewer.iosSrc = 'RED.usdz';
-} else if (currentHour > 25 && currentHour <= 30) {
-    modelViewer.src = 'BLUE.glb';
-    modelViewer.iosSrc = 'BLUE.usdz';
-} else if (currentHour > 30 && currentHour <= 35) {
-    modelViewer.src = 'Scene.glb';
-    modelViewer.iosSrc = 'Scene.usdz';
-}else if (currentHour > 35 && currentHour <= 40) {
-    modelViewer.src = 'RED.glb';
-    modelViewer.iosSrc = 'RED.usdz';
-} else if (currentHour > 40 && currentHour <= 45) {
-    modelViewer.src = 'BLUE.glb';
-    modelViewer.iosSrc = 'BLUE.usdz';
-} else if (currentHour > 45 && currentHour <= 50) {
-    modelViewer.src = 'Scene.glb';
-    modelViewer.iosSrc = 'Scene.usdz';
-} else if (currentHour > 50 && currentHour <= 55) {
-    modelViewer.src = 'RED.glb';
-    modelViewer.iosSrc = 'RED.usdz';
-} else if (currentHour > 55 && currentHour <= 58) {
-    modelViewer.src = 'BLUE.glb';
-    modelViewer.iosSrc = 'BLUE.usdz';
-}
-  else {
-    modelViewer.src = 'Scene2.glb';
-    modelViewer.iosSrc = 'Scene2.usdz';
-}
-
-  arButton.addEventListener('click', () => {
-    modelViewer.activateAR();
-  });
- </script>
+a href="https://ayabureau.com/duo" target="_blank">
+  <button>Перейти на сайт</button>
+</a>
 
 </body>
 </html>
