--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@ src: url('https://dmitriishlokhin.github.io/CoffeeDUO/MabryPro-Light.ttf') forma
 </style>
 <a href="https://ayabureau.com/duo" target="_blank">
   <button slot="ar-button" id="ar-button">
-      <img  srcset="https://dmitriishlokhin.github.io/CoffeeDUO/ar.svg 80h" src="https://dmitriishlokhin.github.io/CoffeeDUO/ar.svg">
-   Смотреть через камеру
+   Перейти на сайт Ayabureau.com
   </button>  
 </a>
 
